# drift-detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: .cproject  .project  average_vector_computer.cpp  average_vector_computer.h  debug_image_generator.h  detector.cpp  detector.h  drift_detection.cpp  drift_vector.h  image_source.h  types.h
src/Debug/: makefile  objects.mk  subdir.mk
